// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component matches open snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-4rodaq"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-t94bnt"
    data-testid="player"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="css-ui4khd"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        className="css-jkon25"
      />
      <circle
        className="css-jdjnld"
      />
      <circle
        className="css-wib5no"
      />
      <g
        className="css-1itd6tp"
      >
        <text
          className="css-htf91a"
          textAnchor="middle"
          x={512}
          y={392}
        >
          Breathe in
        </text>
        <text
          className="css-1u04o22"
          textAnchor="middle"
          x={512}
          y={392}
        >
          Breathe out
        </text>
        <text
          className="css-1ll0n0l"
          textAnchor="middle"
          x={512}
          y={752}
        >
          0
        </text>
        <text
          className="css-1ep9p9z"
          textAnchor="middle"
          x={512}
          y={392}
        />
      </g>
    </svg>
  </div>
  <div
    className="css-79elbk"
  >
    <div
      className="css-4pw2fe"
    >
      <span
        className="css-xrmt9z"
      >
        <div
          className="css-1as2nky"
        />
        <div
          className="css-91tplw"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Header component matches snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-1kyoofh"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-pjuhn5"
    data-testid="player"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="css-63egd1"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        className="css-ofpo8f"
      />
      <circle
        className="css-1ldyrs9"
      />
      <circle
        className="css-38wz48"
      />
      <g
        className="css-1itd6tp"
      >
        <text
          className="css-dywesz"
          textAnchor="middle"
          x={NaN}
          y={NaN}
        />
      </g>
    </svg>
  </div>
  <div
    className="css-79elbk"
  >
    <div
      className="css-4pw2fe"
    >
      <span
        className="css-xrmt9z"
      >
        <div
          className="css-1as2nky"
        />
        <div
          className="css-91tplw"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;
